--- a/Codigo/Preprocesamiento/Repositorio2.ipynb
+++ b/Codigo/Preprocesamiento/Repositorio2.ipynb
@@ -2236,7 +2236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En resumen, basándome en las correlaciones calculadas, el estado del contrato, el tipo de documento del proveedor, Es Grupo y Es PYME no están fuertemente relacionadas con el valor del contrato. Sin embargo, respecto a la justificaciones de modalidad la variable reglas específicas presenta una correlacion lijera con el valor del contrato.\n",
+    "En resumen, en base a las correlaciones calculadas, el estado del contrato, el tipo de documento del proveedor, Es Grupo y Es PYME no están fuertemente relacionadas con el valor del contrato. Sin embargo, respecto a la justificaciones de modalidad la variable reglas específicas presenta una correlacion lijera con el valor del contrato.\n",
     "\n",
     " Esto podría indicar que otros factores no contemplados en el análisis actual podrían estar influyendo significativamente en los montos de los contratos. Por lo que puede haber aspectos específicos de la contratación pública que aún no se hayan explorado y que podrían estar afectando los resultados. Sin emabargo, por el tipo de ministerio se interpreta que mantiene procesos de adquisición flexibles y adaptables, la variabilidad en los valores de contrato podría estar relacionada con la capacidad de ajustar las estrategias de contratación según las necesidades específicas de cada caso, siendo concientes de los cambios en el ámbito ambiental y en el desarrollo sostenible.\n",
     "\n"
