Final Final Final

--- a/Codigo/Preprocesamiento/Repositorio2.ipynb
+++ b/Codigo/Preprocesamiento/Repositorio2.ipynb
@@ -2256,6 +2256,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "Considerando el análisis detallado de la base de datos de contratación pública del Ministerio de Ambiente y Desarrollo Sostenible entre los años 2020 y 2023, se observa una serie de patrones y tendencias que proporcionan una perspectiva rica sobre las prácticas contractuales durante este período.\n",
     "\n",
     "En primer lugar, la preeminencia de la \"Contratación directa\" destaca como una estrategia eficaz en la gestión de recursos y tiempos, sugiriendo una optimización en la ejecución de proyectos. Este enfoque puede indicar la capacidad del Ministerio para tomar decisiones ágiles y directas en la contratación, lo que resulta fundamental para la eficiencia en la implementación de sus iniciativas.\n",
