--- a/Codigo/Preprocesamiento/Repositorio2.ipynb
+++ b/Codigo/Preprocesamiento/Repositorio2.ipynb
@@ -41,24 +41,25 @@
     "Entre la información recolipada se encuentran aspectos cruciales como el estado y los valores asociados a los contratos, así como detalles específicos como el destino del gasto, los días adicionados, el nombre del representante legal y el presupuesto general de la nación asignado. Esta amplia gama de información se presenta como una ventana detallada que permitirá evaluar en profundidad tanto los aspectos financieros como los legales asociados a la ejecución de contratos.\n",
     "\n",
     "\n",
-    "Objetivo General:\n",
+    "## Objetivo General:\n",
+    "\n",
     "Evaluar de manera integral la contratación pública realizada por el Ministerio de Ambiente y Desarrollo Sostenible de Colombia, utilizando la información recopilada en la plataforma del SECOP II, con el propósito de identificar patrones, tendencias y áreas de mejora, y así fortalecer la transparencia, eficiencia y rendición de cuentas en la ejecución de sus funciones gubernamentales en el ámbito ambiental y de desarrollo sostenible.\n",
     "\n",
-    "Objetivos Específicos:\n",
+    "## Objetivos Específicos:\n",
     "\n",
-    "Analizar el estado actual de los contratos ejecutados por el Ministerio, evaluando su cumplimiento, vigencia y posibles impactos en el logro de los objetivos ambientales y de desarrollo sostenible.\n",
+    "* Analizar el estado actual de los contratos ejecutados por el Ministerio, evaluando su cumplimiento, vigencia y posibles impactos en el logro de los objetivos ambientales y de desarrollo sostenible.\n",
     "\n",
-    "Examinar los valores asociados a los contratos, identificando posibles desviaciones presupuestarias y proponiendo medidas correctivas para asegurar el uso eficiente de los recursos públicos.\n",
+    "* Examinar los valores asociados a los contratos, identificando posibles desviaciones presupuestarias y proponiendo medidas correctivas para asegurar el uso eficiente de los recursos públicos.\n",
     "\n",
-    "Investigar el destino del gasto en los contratos, destacando áreas prioritarias y asegurando que los recursos se asignen de manera coherente con los objetivos estratégicos del Ministerio.\n",
+    "* Investigar el destino del gasto en los contratos, destacando áreas prioritarias y asegurando que los recursos se asignen de manera coherente con los objetivos estratégicos del Ministerio.\n",
     "\n",
-    "Analizar los días adicionados en los contratos, identificando posibles demoras o extensiones y proponiendo estrategias para optimizar los plazos de ejecución.\n",
+    "* Analizar los días adicionados en los contratos, identificando posibles demoras o extensiones y proponiendo estrategias para optimizar los plazos de ejecución.\n",
     "\n",
-    "Identificar al representante legal asociado a cada contrato, evaluando su papel en la toma de decisiones y asegurando la transparencia en la designación de responsabilidades.\n",
+    "* Identificar al representante legal asociado a cada contrato, evaluando su papel en la toma de decisiones y asegurando la transparencia en la designación de responsabilidades.\n",
     "\n",
-    "Examinar el presupuesto general de la nación asignado al Ministerio, garantizando su alineación con las prioridades ambientales y de desarrollo sostenible del país.\n",
+    "* Examinar el presupuesto general de la nación asignado al Ministerio, garantizando su alineación con las prioridades ambientales y de desarrollo sostenible del país.\n",
     "\n",
-    "Proponer recomendaciones fundamentadas para fortalecer y optimizar los procesos de contratación del Ministerio, con el objetivo de mejorar la eficiencia, transparencia y rendición de cuentas en la gestión de recursos públicos."
+    "* Proponer recomendaciones fundamentadas para fortalecer y optimizar los procesos de contratación del Ministerio, con el objetivo de mejorar la eficiencia, transparencia y rendición de cuentas en la gestión de recursos públicos."
    ]
   },
   {
