--- a/Codigo/Preprocesamiento/Repositorio2.ipynb
+++ b/Codigo/Preprocesamiento/Repositorio2.ipynb
@@ -2195,12 +2195,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las conclusiones indican que no hay diferencias significativas en las medias de los valores del contrato para las categorías de 'justificacion_modalidad_de' y 'tipodocproveedor'. \n",
-    "En las demás variables se evidencia que si hay una diferencia significativa entre las subcategorías de las variables y el valor del contrato.\n",
+    "Las conclusiones revelan diferencias significativas en las medias de los valores del contrato únicamente para las categorías de 'justificacion_modalidad_de' y 'tipodocproveedor'. En el caso de las demás variables, no se observa una diferencia significativa entre las subcategorías y el valor del contrato.\n",
     "\n",
-    "Basado en lo anterior se interpreta que la detección de diferencias de medias en las categorías de la base de datos puede ser indicativa de variaciones en la asignación de recursos y contratos. Esto podría tener implicaciones importantes para la transparencia, ya que se podrían identificar patrones que sugieran posibles sesgos o irregularidades en la distribución de contratos.\n",
+    "Esta detección de diferencias de medias en las categorías específicas de la base de datos puede ser indicativa de variaciones en la asignación de recursos y contratos. Estas variaciones podrían tener implicaciones importantes para la transparencia, ya que podrían sugerir patrones que indiquen posibles sesgos o irregularidades en la distribución de contratos.\n",
     "\n",
-    "Por otra parte, como oportunidad de mejora al existir esta diferencia el ministerio puede apuntar a áreas específicas de la gestión de recursos que podrían ser más eficientes o requerir mejoras. Esto permitiría al ministerio focalizar sus esfuerzos en optimizar los procesos y asignar recursos de manera más efectiva. Ademas, al identificar patrones en la asignación de contratos podrian señalar áreas de mejora que no se alinean con los objetivos ambientales."
+    "Como oportunidad de mejora, al existir estas diferencias en 'justificacion_modalidad_de' y 'tipodocproveedor', el Ministerio podría enfocarse en áreas específicas de la gestión de recursos que podrían ser más eficientes o requerir mejoras. Esta estrategia permitiría al Ministerio dirigir sus esfuerzos para optimizar procesos y asignar recursos de manera más efectiva."
    ]
   },
   {
@@ -2274,10 +2273,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La falta de correlación entre variables y la ausencia de diferencias significativas en las medias entre grupos según las pruebas de ANOVA sugieren que, en términos generales, no hay patrones lineales predecibles en la relación entre las variables en la base de datos de contratación pública del Ministerio de Ambiente y Desarrollo Sostenible de Colombia. Esto significa que no se puede anticipar el valor de una variable a partir de otra de manera directa.\n",
     "\n",
-    "La ausencia de una correlación aparente entre las variables, pero la presencia de diferencias significativas en las medias entre grupos según las pruebas de ANOVA, sugiere una dinámica interesante en la relación entre las variables en el contexto de la contratación pública del Ministerio de Ambiente y Desarrollo Sostenible de Colombia.\n",
-    "\n",
-    "La falta de correlación lineal directa puede indicar que la relación entre las variables no sigue un patrón simple y directo. Es decir, no se puede predecir el valor de una variable a partir de la otra utilizando una relación lineal. Sin embargo, la existencia de diferencias sistemáticas en las medias entre grupos indica que, a pesar de la falta de relación lineal, aún hay patrones distintivos asociados a las categorías de las variables analizadas."
+    "Sin embargo, es importante destacar que, a pesar de la falta de correlación lineal, tampoco hay diferencias sistemáticas en los valores promedio entre las diferentes categorías de las variables. Esto indica que, en promedio, las variables no muestran variaciones distintivas en relación con las categorías analizadas. En resumen, aunque no hay patrones lineales claros, tampoco hay diferencias significativas en los valores promedio entre grupos, lo que sugiere una cierta homogeneidad en los datos de contratación pública del Ministerio."
    ]
   },
   {
@@ -2307,9 +2305,9 @@
     "\n",
     "El análisis de las condiciones de \"es_grupo\" y \"es_pyme\" destaca la predominancia de entidades individuales no consideradas grupos y una representación limitada de pequeñas y medianas empresas en la adjudicación de contratos. Estos hallazgos indican posibles desafíos para la participación de empresas más pequeñas en las oportunidades de contratación pública y subrayan áreas potenciales para la promoción de la inclusión de este sector en futuros procesos de contratación. En este sentido, podría ser beneficioso explorar estrategias para fomentar la participación de PYMEs, contribuyendo así a una mayor diversidad y competencia en los procesos de contratación del Ministerio.\n",
     "\n",
-    "El enfoque integral adoptado en el análisis destaca la necesidad de una exploración más profunda de las diferencias sistemáticas entre grupos. La consideración de posibles relaciones no lineales entre las variables, interacciones complejas y la posible influencia de variables no contempladas es esencial para comprender la complejidad de los patrones contractuales identificados.\n",
+    "El enfoque integral adoptado en este análisis resalta la necesidad de una exploración más profunda de las diferencias sistemáticas entre grupos. Considerar posibles relaciones no lineales entre las variables, así como interacciones complejas y la posible influencia de variables no contempladas, resulta esencial para comprender la complejidad de los patrones contractuales identificados.\n",
     "\n",
-    "Estos hallazgos no solo proporcionan una visión más completa de las prácticas contractuales del Ministerio, sino que también establecen una base sólida para la mejora continua. La optimización de la gestión de recursos y la toma de decisiones estratégicas pueden beneficiarse de un entendimiento más preciso de los factores que contribuyen a las diferencias sistemáticas en los valores de contrato. Al abordar estas complejidades, el Ministerio puede fortalecer sus prácticas contractuales, adaptándolas de manera más efectiva a las demandas cambiantes y a los objetivos específicos de la cartera ministerial en el ámbito del ambiente y desarrollo sostenible."
+    "Estos hallazgos no solo ofrecen una visión más completa de las prácticas contractuales del Ministerio, sino que también establecen una base sólida para la mejora continua. La optimización de la gestión de recursos y la toma de decisiones estratégicas pueden beneficiarse de un entendimiento más preciso de los factores que contribuyen a las diferencias sistemáticas en los valores de contrato. Abordar estas complejidades permitirá al Ministerio fortalecer sus prácticas contractuales, adaptándolas de manera más efectiva a las demandas cambiantes y a los objetivos específicos de la cartera ministerial en el ámbito del ambiente y desarrollo sostenible."
    ]
   }
  ],
